<resources>
    <string name="app_name">Cheer With Me</string>
    <string name="hello_main">Hello Main</string>
    <string name="hello_happening">Hello Happening</string>
    <string name="hello_friends">Hello Friends</string>
    <string name="hello_profile">Hello Profile</string>
    <string name="title_main">Cheers!</string>
    <string name="title_map">Map</string>
    <string name="title_happening">Happening</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="oauth_server_client_id">100813085034-huu6nmbj7uicgik0r6ms9oe90j51drl0.apps.googleusercontent.com</string>
    <string name="mapbox_access_token">/*Look at README.md to see details around getting mapbox access token*/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>