<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_beer_black_24dp"
        android:title="@string/title_main" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/happeningFragment"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_happening" />

    <item
        android:id="@+id/friendsFragment"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />
</menu>